--- a/WindowsRestAPI/Main.resx
+++ b/WindowsRestAPI/Main.resx
@@ -1802,6 +1802,9 @@
         IAAAAOAHAADgBwAA//8AAP//AAD//wAA
 </value>
   </data>
+  <metadata name="taskbarMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>104, 24</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAB6AwAAZgAAAICAAAABACAAKAgBAOADAABAQAAAAQAgAChCAAAIDAEAMDAAAAEA
